Adjust scale to avoid bleeding

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	background-color: #000;
+	background-color: #222;
 	color: #fff;
 	font-family: Monospace;
 	font-size: 13px;
